tests/wormhole/sfpi/gold/warn_push.txt
warn.cc: In function 'void pushwithoutpop()':
warn.cc:86:30: error: too few arguments to function 'void __builtin_riscv_sfppushc(unsigned int)'
   86 |     __builtin_riscv_sfppushc();
      |                              ^
